# robot-framework-state-machine

./: .pylintrc  .readthedocs.yaml  CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml  setup.py
.circleci/: config.yml
docs/: StateMachineLibrary.html  libdoc.py
examples/: task_to_calculate_sum_of_2_numbers.robot  test_of_led_controller_with_context_manipulation.robot
examples/task_to_generate_data_transmission_report/: README.rst  data_transmission.csv  data_transmission_test_line.json  keywords.py  report.template.html  report_builder.py  requirements.txt  task.robot
examples/task_to_generate_data_transmission_report/logs/: data-transmission-report.html  log.html
examples/test_of_preparing_fake_reprot_in_python/: keywords.py  test_of_preparing_fake_reprot.robot
examples/test_rest_api_of_led_controller/: README.rst  led_controller.py  requirements.txt  test.robot
examples/test_rest_api_of_led_controller/logs/: log.html
examples/test_two_products_with_two_state_machines/: README.rst  product_a_keywords.robot  product_b_keywords.robot  requirements.txt  test.robot
examples/test_two_products_with_two_state_machines/logs/: log.html
requirements/: dev.txt
src/StateMachineLibrary/: __init__.py  exceptions.py  facade.py  interface.py  state_machine.py  store.py  utils.py
tests/: test_utils.py
tests/atests/: test_StateMachineLibrary.robot
tests/utests/: test_state_machine.py  test_state_machine_store.py  test_utils.py
